--- a/css/main.css
+++ b/css/main.css
@@ -9,4 +9,25 @@ body {
   margin: 0;
   background-image: url(../images/bgtile.png);
   background-repeat: repeat-x;
+  width: 100%;
+}
+main {
+  width: 80%;
+  margin: 0 auto;
+}
+#phones {
+  vertical-align: top;
+  border: 1px red;
+  width: 39%;
+  display: inline-block;
+}
+#content {
+  vertical-align: top;
+  border: 1px red;
+  width: 60%;
+  display: inline-block;
+}
+footer {
+  display: inline-block;
+  margin: 0 auto;
 }
