--- a/css/main.css
+++ b/css/main.css
@@ -27,6 +27,9 @@ main {
   width: 60%;
   display: inline-block;
 }
+#text {
+  background-image: url(../images/frame.png);
+}
 ul {
   text-align: center;
   list-style: none;
