--- a/css/main.css
+++ b/css/main.css
@@ -5,13 +5,14 @@ light blue: #1c5380
 */
 
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
   background-image: url(../images/bgtile.png);
   background-repeat: repeat-x;
   width: 100%;
+  font-family: Helvetica, Arial, sans-serif;
 }
 main {
+  padding-top: 80px;
   width: 80%;
   margin: 0 auto;
 }
@@ -25,10 +26,41 @@ main {
   vertical-align: top;
   border: 1px red;
   width: 60%;
+  max-width: 504px;
   display: inline-block;
+}
+header {
+  margin-top: 20px;
+}
+header {
+  padding: 15px;
+}
+header button {
+  font-size: 10px;
+  margin-top: 10px;
+  padding: 10px;
+  float: right;
 }
 #text {
   background-image: url(../images/frame.png);
+  background-repeat: no-repeat;
+  max-width: 504px;
+  padding: 20px;
+}
+#text img {
+  padding-left: 15px;
+}
+h1 {
+  margin: 0;
+  color: #06365f;
+  font-size: 25px;
+  padding: 10px 15px;
+}
+p{
+  font-size: 14px;
+  line-height: 22px;
+  font-family: Helvetica, Arial, sans-serif;
+  padding: 15px;
 }
 ul {
   text-align: center;
