--- a/css/main.css
+++ b/css/main.css
@@ -24,28 +24,33 @@ main {
 }
 #content {
   vertical-align: top;
-  border: 1px red;
   width: 60%;
   max-width: 504px;
   display: inline-block;
 }
 header {
-  margin-top: 20px;
-}
-header {
-  padding: 15px;
+  margin-top: 10px;
 }
 header button {
-  font-size: 10px;
-  margin-top: 10px;
-  padding: 10px;
+  background-color: rgba(255,255,255,.2);
+  display: inline-block;
+  border-radius: 3px;
+  border-color: #1c5380;
+  font-size: 16px;
+  color: white;
+  margin: 15px;
+  padding: 5px 15px 10px 10px;
   float: right;
+}
+header button img {
+  margin: 5px 10px -5px 0px;
 }
 #text {
   background-image: url(../images/frame.png);
   background-repeat: no-repeat;
   max-width: 504px;
-  padding: 20px;
+  margin-top: 25px;
+  padding: 25px;
 }
 #text img {
   padding-left: 15px;
@@ -53,13 +58,13 @@ header button {
 h1 {
   margin: 0;
   color: #06365f;
-  font-size: 25px;
+  font-size: 26px;
+  line-height: 34px;
   padding: 10px 15px;
 }
 p{
   font-size: 14px;
   line-height: 22px;
-  font-family: Helvetica, Arial, sans-serif;
   padding: 15px;
 }
 ul {
