--- a/css/main.css
+++ b/css/main.css
@@ -29,7 +29,7 @@ main {
   display: inline-block;
 }
 header {
-  margin-top: 10px;
+  margin-top: 20px;
 }
 header button {
   background-color: rgba(255,255,255,.2);
@@ -50,7 +50,7 @@ header button img {
   background-repeat: no-repeat;
   max-width: 504px;
   margin-top: 25px;
-  padding: 25px;
+  padding: 20px;
 }
 #text img {
   padding-left: 15px;
@@ -58,14 +58,15 @@ header button img {
 h1 {
   margin: 0;
   color: #06365f;
-  font-size: 26px;
-  line-height: 34px;
+  font-size: 24px;
+  line-height: 32px;
   padding: 10px 15px;
 }
 p{
-  font-size: 14px;
-  line-height: 22px;
-  padding: 15px;
+  font-size: 16px;
+  line-height: 24px;
+  padding: 10 15px;
+  margin: 0;
 }
 ul {
   text-align: center;
@@ -75,4 +76,11 @@ ul {
 }
 li {
   display: inline-block;
+  padding: 10px;
+}
+footer {
+  margin: 10px auto;
+  font-size: 12px;
+  text-transform: uppercase;
+  font-weight: bold;
 }
